# muquiz-bot

./: .gitignore  Dockerfile  pyproject.toml
muquiz_boy/: bot_paths.py  editor.py  ly_templates.py  ly_utils.py  main.py  muquiz_boy.py  path_utils.py  progression.py  session-save.py  utils.py
muquiz_boy/assets/: jig.midi  players.json
muquiz_boy/assets/cache/: to_play.flac  to_play.ly  to_play.midi
muquiz_boy/assets/templates/: single_piano.ly
muquiz_boy/bu/: bot_paths.py  ly_utils.py  main.py  muquiz_boy.py
muquiz_boy/bu/bu/: bot_paths.py
muquiz_boy/bu/data/assets/: players.json
muquiz_boy/bu/data/assets/cache/: out.flac  out.ly  out.midi  to_play.flac
muquiz_boy/bu/data/assets/templates/: c_jig.ly
muquiz_boy/bu/data/cache/: out.flac  out.midi
muquiz_boy/data/assets/: options.json  players.json
muquiz_boy/data/assets/cache/: jig.flac  to_play.ly
muquiz_boy/data/assets/templates/: c_jig.ly  single_piano.ly
muquiz_boy/data/cache/: answer.flac  answer.ly  answer.midi  jig.flac  jig.ly  jig.midi  out.flac  out.ly  out.midi
muquiz_boy/data/game-data/: players.json
muquiz_boy/data/saves/: current.ly
muquiz_boy/data/saves/Dincio/: current.pickle  test.pickle
